--- a/Disp_WinForm/packages.config
+++ b/Disp_WinForm/packages.config
@@ -1,11 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DocumentFormat.OpenXml" version="2.12.1" targetFramework="net48" />
-  <package id="Geckofx60.64" version="60.0.54" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.12.3" targetFramework="net48" />
+  <package id="Geckofx60.64" version="60.0.55" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net48" />
+  <package id="System.Text.Json" version="5.0.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net452" requireReinstallation="true" />
-  <package id="ZXing.Net" version="0.16.5" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="ZXing.Net" version="0.16.6" targetFramework="net48" />
 </packages>
