--- a/Disp_WinForm/Disp_WinForm.csproj
+++ b/Disp_WinForm/Disp_WinForm.csproj
@@ -196,6 +196,12 @@
     <Compile Include="detail.Designer.cs">
       <DependentUpon>detail.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditObject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditObject.Designer.cs">
+      <DependentUpon>EditObject.cs</DependentUpon>
+    </Compile>
     <Compile Include="Edit_kontakts.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -275,6 +281,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="detail.resx">
       <DependentUpon>detail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditObject.resx">
+      <DependentUpon>EditObject.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Edit_kontakts.resx">
       <DependentUpon>Edit_kontakts.cs</DependentUpon>
